@@ -1,5 +1,6 @@
 ext {
   grailsVersion = "@grails.version@"
+  isJava8Compatible = org.gradle.api.JavaVersion.current().isJava8Compatible()
 }
 
 buildscript {
@@ -35,4 +36,13 @@ dependencies {
   compile "org.grails:grails-dependencies:$grailsVersion"
 
   runtime 'org.springframework.boot:spring-boot-starter-logging'
+}
+
+run {
+    minHeapSize = "768m"
+    maxHeapSize = "768m"
+    if(!isJava8Compatible) {
+      jvmArgs "-XX:PermSize=96m", "-XX:MaxPermSize=256m"
+    }
+    jvmArgs "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1", "-XX:CICompilerCount=3"
 }
