@@ -1,5 +1,6 @@
 ext {
   grailsVersion = "3.0.0.BUILD-SNAPSHOT"
+  isJava8Compatible = org.gradle.api.JavaVersion.current().isJava8Compatible()
 }
 
 buildscript {
@@ -57,4 +58,13 @@ dependencies {
 
   testCompile "org.grails:grails-plugin-testing:$grailsVersion"
 
+}
+
+run {
+    minHeapSize = "768m"
+    maxHeapSize = "768m"
+    if(!isJava8Compatible) {
+      jvmArgs "-XX:PermSize=96m", "-XX:MaxPermSize=256m"
+    }
+    jvmArgs "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1", "-XX:CICompilerCount=3"
 }
